# Copyright 2025 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

bazel_product_bundle_prefix = "//products/microfuchsia:microfuchsia_eng"
use_bazel_images_only = true

# Add all the microfuchsia targets available to be built.
product_bundle_labels = [ "//products/microfuchsia" ]
additional_default_targets = product_bundle_labels
